[project]
name = "reprozip-mytutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuki Osada"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "reprozip (>=1.3,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
