[project]
name = "reprozip-mytutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Myxogastria0808",email = "r.rstudio.c@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "reprozip (>=1.3,<2.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "reprounzip (>=1.3,<2.0)",
    "reprounzip-docker (>=1.2,<2.0)",
    "reprounzip-vagrant (>=1.2,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
